src/poi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:  
      containers:
      - name: poi
        image: registryefd3942.azurecr.io/tripinsights/poi:1.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: poi-service
spec:
  selector:
    app: poi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
