src/trip.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - name: trips
        image: registryefd3942.azurecr.io/tripinsights/trips:1.0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: kv-oh42-mnt
          mountPath: "/secrets"
          readOnly: true
        volumes:
        - name: kv-oh42-mnt
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: kv-oh42
---
apiVersion: v1
kind: Service
metadata:
  name: trips-service
spec:
  selector:
    app: trips
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
