src/tripviewer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:  
      containers:
      - name: tripviewer
        image: registryefd3942.azurecr.io/tripinsights/tripviewer:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer-service
spec:
  selector:
    app: tripviewer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
