src/userprofile.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
spec:
  replicas: 2
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - name: userprofile
        image: registryefd3942.azurecr.io/tripinsights/userprofile:1.0
        ports:
        - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile-service
spec:
  selector:
    app: userprofile
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8083
  type: ClusterIP
