src/route-api.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: tripinsights-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: poi-service
          servicePort: 80
        path: /api/poi/healthcheck
      - backend:
          serviceName: poi-service
          servicePort: 80
        path: /api/poi
      - backend:
          serviceName: trips-service
          servicePort: 80
        path: /api/trips/healthcheck
      - backend:
          serviceName: trips-service
          servicePort: 80
        path: /api/trips
      - backend:
          serviceName: user-java-service
          servicePort: 80
        path: /api/user-java/healthcheck
      - backend:
          serviceName: user-java-service
          servicePort: 80
        path: /api/user-java
      - backend:
          serviceName: userprofile-service
          servicePort: 80
        path: /api/user/healthcheck
      - backend:
          serviceName: userprofile-service
          servicePort: 80
        path: /api/user
      - backend:
          serviceName: trips
          servicePort: 80
        path: /swagger/docs/trips
      - backend:
          serviceName: trips
          servicePort: 80
        path: /api/json
