src/route-web.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tripinsights-static
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: tripviewer-service
          servicePort: 80
        path: /
